--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.0.0
   flutter_dotenv: ^5.2.1
   smooth_page_indicator: ^1.1.0
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
