--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   smooth_page_indicator: ^1.1.0
   curved_navigation_bar: ^1.0.6
+  intl: ^0.20.2
+  flutter_time_picker_spinner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
