--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   intl: ^0.20.2
   flutter_time_picker_spinner: ^2.0.0
+  percent_indicator: ^4.2.4
 
 dev_dependencies:
   flutter_test:
